@@ -1,3 +1,9 @@
+2004-10-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b233
+
+	* Fix: Config wizard properly handles smtpPassword now.  Previously,
+	  password values were never saved in the config file, so this was an
+	  unseen case.
+
 2004-10-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b232
 
 	* Fix: Tested and fixed SMTP code
